// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index settings acceleration components renders acceleration index settings with default options 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="autoInterval"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto (Interval), is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto (Interval)
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh increments
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout euiFormControlLayout--group"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Refresh increments"
            className="euiFieldNumber euiFieldNumber--inGroup"
            id="random_html_id"
            min={1}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Refresh increments"
            type="number"
            value={15}
          />
        </div>
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <select
              className="euiSelect euiFormControlLayout__append"
              onBlur={[Function]}
              onChange={[Function]}
              onMouseUp={[Function]}
              value="minute"
            >
              <option
                key="0"
                value="minute"
              >
                minutes(s)
              </option>
              <option
                key="1"
                value="hour"
              >
                hour(s)
              </option>
              <option
                key="2"
                value="day"
              >
                day(s)
              </option>
              <option
                key="3"
                value="week"
              >
                week(s)
              </option>
            </select>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                className="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how frequent the index gets updated when performing the refresh job.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
       
      <div
        className="euiText euiText--extraSmall"
      >
        <a
          className="euiLink euiLink--primary"
          href="https://github.com/opensearch-project/opensearch-spark/blob/main/docs/index.md#create-index-options"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-hidden={true}
            aria-label="External link"
            className="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
            />
          </svg>
          <span
            className="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
      </div>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;

exports[`Index settings acceleration components renders acceleration index settings with different options1 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="autoInterval"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto (Interval), is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto (Interval)
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fillRule="non-zero"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh increments
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout euiFormControlLayout--group"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Refresh increments"
            className="euiFieldNumber euiFieldNumber--inGroup"
            id="random_html_id"
            min={1}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Refresh increments"
            type="number"
            value={15}
          />
        </div>
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <select
              className="euiSelect euiFormControlLayout__append"
              onBlur={[Function]}
              onChange={[Function]}
              onMouseUp={[Function]}
              value="minute"
            >
              <option
                key="0"
                value="minute"
              >
                minutes(s)
              </option>
              <option
                key="1"
                value="hour"
              >
                hour(s)
              </option>
              <option
                key="2"
                value="day"
              >
                day(s)
              </option>
              <option
                key="3"
                value="week"
              >
                week(s)
              </option>
            </select>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                className="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fillRule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how frequent the index gets updated when performing the refresh job.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
       
      <div
        className="euiText euiText--extraSmall"
      >
        <a
          className="euiLink euiLink--primary"
          href="https://github.com/opensearch-project/opensearch-spark/blob/main/docs/index.md#create-index-options"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-label="External link"
            className="euiIcon euiIcon--small euiLink__externalIcon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
            />
          </svg>
          <span
            className="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
      </div>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;

exports[`Index settings acceleration components renders acceleration index settings with different options2 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="autoInterval"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto (Interval), is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto (Interval)
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fillRule="non-zero"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh increments
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout euiFormControlLayout--group"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Refresh increments"
            className="euiFieldNumber euiFieldNumber--inGroup"
            id="random_html_id"
            min={1}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Refresh increments"
            type="number"
            value={15}
          />
        </div>
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <select
              className="euiSelect euiFormControlLayout__append"
              onBlur={[Function]}
              onChange={[Function]}
              onMouseUp={[Function]}
              value="minute"
            >
              <option
                key="0"
                value="minute"
              >
                minutes(s)
              </option>
              <option
                key="1"
                value="hour"
              >
                hour(s)
              </option>
              <option
                key="2"
                value="day"
              >
                day(s)
              </option>
              <option
                key="3"
                value="week"
              >
                week(s)
              </option>
            </select>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                className="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fillRule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how frequent the index gets updated when performing the refresh job.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
       
      <div
        className="euiText euiText--extraSmall"
      >
        <a
          className="euiLink euiLink--primary"
          href="https://github.com/opensearch-project/opensearch-spark/blob/main/docs/index.md#create-index-options"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-label="External link"
            className="euiIcon euiIcon--small euiLink__externalIcon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
            />
          </svg>
          <span
            className="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
      </div>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;
